# word-dictionary

./: .gitignore  Cargo.toml  README.md  locustfile.py  words.json
benches/: bench.rs
src/: main.rs  storage.rs
src/storage/: backend.rs  file.rs
